# flowcat

./: AGENTS.md  Cargo.toml  Dockerfile  FEATURES.md  PROCESSOR-DESIGN.md  QUICKSTART.md  README.md
.github/workflows/: ci.yml  docs.yml
deploy/: .env.example  README.md  agent.example.yaml  docker-compose.yml
docs/: context-relay-evaluation.md
flowcat-agent/: Cargo.toml
flowcat-agent/src/: brain.rs  engine.rs  graph.rs  lib.rs
flowcat-cli/: Cargo.toml
flowcat-core/: Cargo.toml
flowcat-core/src/: brain.rs  codec.rs  session.rs
flowcat-core/src/agent/: voicemail.rs
flowcat-core/src/audio/: mod.rs
flowcat-core/src/observer/: rtvi.rs
flowcat-core/src/pipeline/: cascaded.rs  context_relay.rs  mod.rs  s2s.rs  s2s_test_mocks.rs
flowcat-core/src/realtime/: gemini_live.rs  mod.rs  service_adapter.rs
flowcat-core/src/service/: mod.rs
flowcat-core/src/sip/: agent.rs
flowcat-server/: Cargo.toml
flowcat-server/src/: config.rs  events.rs  lib.rs  main.rs  playground.html  run.rs  server.rs  session.rs  sip.rs  socket.rs  webrtc.rs
flowcat-services/: Cargo.toml
flowcat-services/src/: factory.rs  lib.rs
flowcat-services/src/llm/: aws_bedrock.rs  openai.rs  openai_responses.rs
flowcat-services/src/realtime/: azure.rs  grok.rs  inworld.rs  openai.rs  ultravox.rs
flowcat-services/src/stt/: aws_transcribe.rs  nvidia.rs
flowcat-services/src/tts/: asyncai.rs  aws_polly.rs  groq.rs  kitten.rs  lmnt.rs  mistral.rs  mod.rs  tail_tts_common.rs
flowcat-services/tests/: live_openai_context_relay.rs
flowcat-telephony/: Cargo.toml
flowcat-telephony/src/: lib.rs  plivo.rs
flowcat-transports/: Cargo.toml
flowcat-transports/src/webrtc/: mod.rs  signaling.rs
website/src/: api-reference.md  configuration.md  deployment.md  introduction.md
